# phone-farm-python-client

./: README.md  pyproject.toml
src/phonefarms/: __init__.py  client.py  errors.py  humanize.py  types.py
src/phonefarms/_generated/: __init__.py
src/phonefarms/_generated/api/slots/: create_session.py  create_slot.py  delete_slot.py  get_slot.py  list_slots.py  release_session.py
src/phonefarms/_generated/models/: __init__.py  create_session_response.py  create_slot_body.py  create_slot_response.py  delete_slot_response.py  list_slots_response.py  release_session_response.py  slot_detail.py  validation_error.py  validation_error_context.py
